<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/AppHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/app_name"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/Copyrights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/AppHeading"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/developer"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/ItemsHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Copyrights"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/item_heading"
        android:textSize="24sp"/>

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ItemsHeading"
        android:background="@drawable/celadon_border"
        app:queryHint="Search Items" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchView"
        android:layout_marginTop="8dp"
        android:padding="2dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:iconifiedByDefault="false"
        android:src="@drawable/baseline_add_24"
        app:backgroundTint="@color/celadon"
        app:tint="@color/white"/>

</RelativeLayout>